testsuite/tests/parser/should_fail/strictnessDataCon_B.stderr

strictnessDataCon_B.hs:1:21: error:
    {-# UNPACK #-} cannot appear in this position.
